added packages, used items in formatting

--- a/local.yml
+++ b/local.yml
@@ -1,5 +1,10 @@
 - hosts: localhost
   become: true
   tasks:
-  - name: Install htop
-    apt: name=htop
+  - name: Install packages
+    apt: name={{item}}
+    with_items:
+     - htop
+     - mc
+     - tmux
+
