added packages, used items in formatting

--- a/local.yml
+++ b/local.yml
@@ -2,9 +2,5 @@
   become: true
   tasks:
   - name: Install packages
-    apt: name={{item}}
-    with_items:
-     - htop
-     - mc
-     - tmux
+    apt: name=['htop', 'mc', 'tmux']
 
